backend_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: main
          image: ondrejsika/counter
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 20m
              memory: 20Mi
            limits:
              cpu: 60m
              memory: 60Mi
