frontend_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  annotation:
    app.openshift.io/connects-to: [{"apiVersion":"apps/v1","kind":"Deployment","name":"backend"}]
spec:
  replicas: 4
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: main
          image: ghcr.io/ondrejsika/counter-frontend:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 200m
              memory: 150Mi
            limits:
              cpu: 500m
              memory: 400Mi
