backend_ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
spec:
  ingressClassName: openshift-default
  rules:
  - host: counter-manifests-backend.apps.okd0.sikademo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
